k8s-resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
  namespace: dsmhack-2025-cultivate
spec:
  selector:
    matchLabels:
      app: shopeatlocal
  template:
    metadata:
      labels:
        app: shopeatlocal
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - image: app-image
          name: shopeatlocal
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: 512Mi
              cpu: 500m
            requests:
              memory: 32Mi
              cpu: 10m
          volumeMounts:
            - name: images-vol
              mountPath: /workspace/app/StoreImg
      volumes:
        - name: images-vol
          persistentVolumeClaim:
            claimName: images-pvc
