k8s-resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopeatlocal
  namespace: dsmhack-2025-cultivate
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: shopeatlocal
